# graphics_bundle

./: .gitignore  Pipfile  README.md  graphics_bundle.py  image_downloader.py  pyproject.toml
graphics_bundle.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
