[tool.poetry]
name = "graphics_bundle"
version = "0.1.0"
description = "Graphics bundle creator for Packt books on CDP"
authors = ["Rudolph Almeida <rudolf1.almeida@gmail.com>"]
license = "MIT"
include = ["chromedriver.exe", "README.md"]

[tool.poetry.dependencies]
python = "^3.6 || ^3.7"
selenium = "^3.141"

[tool.poetry.dev-dependencies]
flake8 = "^3.7"
black = { version = "*", allows-prereleases = true }

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
gbc = "graphics_bundle:main"
